# crd-to-terraform

./: README.md  example.go  example.txt  pyproject.toml
crd2go/: gen.py  templates.py  ui.py
